--- a/Planner/src/planner/PlannerFrame.form
+++ b/Planner/src/planner/PlannerFrame.form
@@ -85,14 +85,16 @@
                       <Component id="newDescField" min="-2" pref="29" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="newMonth" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="newDay" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="newYear" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="newDDLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="newDDLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="newDDLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="newDDLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="newDDLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="newDDLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="newDDLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="newDDLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="newColorLabel" min="-2" pref="22" max="-2" attributes="0"/>
